--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,21 @@ body {
   background-repeat: no-repeat;
   min-height: 100vh; }
 
+.logo {
+  width: 4.25rem; }
+
+.search__icon {
+  width: 2rem;
+  height: 2rem; }
+
+.user-nav__icon {
+  width: 2.25rem;
+  height: 2.25rem; }
+
+.user-nav__user-photo {
+  width: 3.75rem;
+  border-radius: 50%; }
+
 .container {
   max-width: 120rem;
   height: 50rem;
