--- a/css/style.css
+++ b/css/style.css
@@ -50,19 +50,54 @@ body {
   min-height: 100vh; }
 
 .logo {
-  width: 4.25rem; }
+  height: 3.25rem; }
 
-.search__icon {
-  width: 2rem;
-  height: 2rem; }
+.search {
+  flex: 0 0 40%;
+  display: flex;
+  align-items: center;
+  justify-content: center; }
+  .search__input {
+    font-family: inherit;
+    font-size: inherit;
+    color: inherit;
+    padding: 0.7rem 2rem;
+    border: none;
+    border-radius: 100px;
+    width: 90%;
+    margin-right: -3.25rem;
+    background-color: var(--color-grey-light-2);
+    transition: all .2s; }
+    .search__input:focus {
+      outline: none;
+      width: 100%;
+      background-color: var(--color-grey-light-3); }
+    .search__input::-webkit-input-placeholder {
+      font-weight: 100;
+      color: var(--color-grey-dark-4); }
+  .search__input:focus + .search__button {
+    background-color: var(--color-grey-light-3); }
+  .search__button {
+    border: none;
+    background-color: var(--color-grey-light-2);
+    cursor: pointer; }
+    .search__button:focus {
+      outline: none; }
+    .search__button:active {
+      transform: translateY(2px); }
+  .search__icon {
+    width: 2rem;
+    height: 2rem;
+    fill: var(--color-grey-dark-3); }
 
-.user-nav__icon {
-  width: 2.25rem;
-  height: 2.25rem; }
-
-.user-nav__user-photo {
-  width: 3.75rem;
-  border-radius: 50%; }
+.user-nav {
+  background-color: green; }
+  .user-nav__icon {
+    width: 2.25rem;
+    height: 2.25rem; }
+  .user-nav__user-photo {
+    width: 3.75rem;
+    border-radius: 50%; }
 
 .container {
   max-width: 120rem;
@@ -71,9 +106,14 @@ body {
   background-color: var(--color-grey-light-2); }
 
 .header {
+  font-size: 1.4rem;
   height: 7rem;
   background-color: #fff;
-  border-bottom: var(--color-grey-light-2); }
+  border-bottom: var(--color-grey-light-2);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 3rem 0 3rem; }
 
 .content {
   display: flex; }
