--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -2,7 +2,7 @@
 /// LOGO
 
  .logo {
-    width: 4.25rem;
+    height: 3.25rem;
 }
 
 
@@ -11,17 +11,58 @@
 
 .search {
 
+    flex: 0 0 40%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
     &__input {
+    font-family: inherit;
+    font-size: inherit;
+    color: inherit;
+    padding: 0.7rem 2rem;
+    border: none;
+    border-radius: 100px;
+    width: 90%;
+    margin-right: -3.25rem;
+    background-color: var(--color-grey-light-2);
+    transition: all .2s;
+
+    &:focus {
+        outline: none;
+        width: 100%;
+        background-color: var(--color-grey-light-3);
+    }
+
+    &::-webkit-input-placeholder {
+        font-weight: 100;
+        color: var(--color-grey-dark-4);
+    }
 
     }
 
-    &__button {
+    &__input:focus + &__button {
+        background-color: var(--color-grey-light-3);
+    }
 
+    &__button {
+        border: none;
+        background-color: var(--color-grey-light-2);
+        cursor: pointer;
+
+        &:focus {
+            outline: none;
+        }
+
+        &:active {
+            transform: translateY(2px);
+        }
     }
 
     &__icon {
         width: 2rem;
         height: 2rem;
+        fill: var(--color-grey-dark-3);
     }
 
 }
@@ -31,6 +72,7 @@
 /// user_nav
 
 .user-nav {
+    background-color: green;
 
     &__icon-box {
 
@@ -54,20 +96,4 @@
         border-radius: 50%;
     }
 
-}
-
-
-
-
-/////////////////////////
-/// LOGO
-
-.logo {
-}
-
-
-/////////////////////////
-/// LOGO
-
-.logo {
 }
