--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -7,9 +7,15 @@
 }
 
 .header {
+    font-size: 1.4rem;
     height: 7rem;
     background-color: #fff;
     border-bottom: var(--color-grey-light-2);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 3rem 0 3rem;
+
 }
 
 .content {
