--- a/css/style.css
+++ b/css/style.css
@@ -91,13 +91,42 @@ body {
     fill: var(--color-grey-dark-3); }
 
 .user-nav {
-  background-color: green; }
+  display: flex;
+  flex: 0 0 20%;
+  justify-content: space-around;
+  align-self: stretch; }
+  .user-nav__icon-box {
+    position: relative; }
   .user-nav__icon {
     width: 2.25rem;
-    height: 2.25rem; }
+    height: 2.25rem;
+    fill: var(--color-grey-dark-2); }
+  .user-nav__notification {
+    background-color: var(--color-primary);
+    font-size: 0.8rem;
+    height: 1.75rem;
+    width: 1.75rem;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 1.5rem;
+    right: 1.5rem;
+    color: #fff; }
   .user-nav__user-photo {
     width: 3.75rem;
-    border-radius: 50%; }
+    border-radius: 50%;
+    margin-right: 1rem; }
+
+.user-nav > *:hover {
+  background-color: var(--color-grey-light-2);
+  cursor: pointer; }
+
+.user-nav > * {
+  display: flex;
+  align-items: center;
+  padding: 2rem; }
 
 .container {
   max-width: 120rem;
