--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -72,28 +72,58 @@
 /// user_nav
 
 .user-nav {
-    background-color: green;
+    display: flex;
+    flex: 0 0 20%;
+    justify-content: space-around;
+    align-self: stretch;
+    // align-items: center;
+    
+
 
     &__icon-box {
-
+        position: relative;
     }
 
     &__icon {
         width: 2.25rem;
         height: 2.25rem;
+        fill: var(--color-grey-dark-2);
     }
 
     &__notification {
-
-    }
-
-    &__user {
-
+        background-color: var(--color-primary);
+        font-size: 0.8rem;
+        height: 1.75rem;
+        width: 1.75rem;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: absolute;
+        top: 1.5rem;
+        right: 1.5rem;
+        color: #fff;
     }
 
     &__user-photo {
         width: 3.75rem;
         border-radius: 50%;
+        margin-right: 1rem;
     }
 
 }
+
+
+.user-nav > *:hover {
+    background-color: var(--color-grey-light-2);
+    cursor: pointer;
+    
+}
+
+.user-nav > * {
+    display: flex;
+    align-items: center;
+    padding: 2rem;
+    
+}
+
