--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,21 @@ body {
   align-items: center;
   padding: 2rem; }
 
+.sidebar {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; }
+
+.side-nav__icon {
+  width: 1.75rem;
+  height: 1.75rem; }
+
+.legal {
+  font-size: 1.2rem;
+  color: var(--color-grey-light-4);
+  text-align: center;
+  padding: 2.5rem; }
+
 .container {
   max-width: 120rem;
   height: 50rem;
@@ -145,11 +160,12 @@ body {
   padding: 0 3rem 0 3rem; }
 
 .content {
-  display: flex; }
+  display: flex;
+  height: 60rem; }
 
 .sidebar {
-  background-color: var(--color-grey-dark-1);
-  flex: 0 0 18%; }
+  flex: 0 0 18%;
+  background-color: var(--color-grey-dark-1); }
 
 .hotel-view {
   background-color: orangered;
