--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -135,19 +135,69 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    align-items: center;
 }
 
 .side-nav {
 
+    margin-top: 3rem;
+    font-size: 1.4rem;
+    text-transform: uppercase;
+    width: 100%;
     
 
     &__item {
+        list-style: none;   
+        position: relative;
 
+        &:not(:last-child) {
+            margin-bottom: 1rem;
+        }
+    }
+
+    &__item::before {
+        content: "";
+        display: block;
+        background-color: var(--color-primary);
+        height: 100%;
+        width: 3px;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0; 
+        transition: transform 0.2s ,
+                    width 0.4s cubic-bezier(1,0,0,1) 0.2s ,
+                    background-color 0.1s;
+        transform: scaleY(0);
+    }
+
+    &__item--active::before,
+    &__item:hover::before {
+        width: 100%;
+        transform: scaleY(1);
+    }
+
+    &__item:active::before{
+        background-color: var(--color-primary-light);
+    } 
+
+    &__link:visited ,
+    &__link:link {
+        display: flex;
+        align-items: center;
+        text-decoration: none;
+        color: var(--color-grey-light-1);
+        padding: 1.5rem 3rem;
+        position: relative;
+        z-index: 1;
     }
 
     &__icon {
         width: 1.75rem;
         height: 1.75rem;
+        margin-right: 2rem;
+        fill: currentColor;
     }
 }
 
