--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -226,6 +226,7 @@
 
     &__photo{
         width: 100%;
+        height: 100%;
     }
 }
 
@@ -234,6 +235,16 @@
 /// OVERVIEW
 .overview {
     display: flex;
+    align-items: center;
+    border-bottom:1px solid var(--color-grey-light-3);
+
+    &__heading {
+        font-size: 2.25rem;
+        font-weight: 300;
+        text-transform: uppercase;
+        letter-spacing: 1px;
+        padding: 1.5rem 3rem;
+    }
 
     &__icon--star,
     &__icon--location {
@@ -242,7 +253,82 @@
         fill: var(--color-primary);
     }
 
+    &__icon--location {
+        margin-right: 0.5rem;
+    }
+
     &__stars {
         margin-right: auto;
+        display: flex;
+    }
+
+    &__location {
+        display: flex;
+        align-items: center;
+        font-size: 1.2rem;
+    }
+
+    &__rating {
+        margin-left: 3rem;
+        background-color: var(--color-primary);
+        color: #fff;
+        align-self: stretch;
+        padding: 0 2.25rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    &__rating--average {
+        font-size: 2.25rem;
+        font-weight: 300;
+        margin-bottom: -3px;
+    }
+    
+    &__rating--count {
+        font-size: 0.8rem;
+        text-transform: uppercase;
+    } 
+}
+
+////////////////////////////////////////
+/// BUTTON
+
+.btn-inline {
+    font-size: inherit;
+    border: none;
+    background: none;
+    color: var(--color-primary);
+    border-bottom: 1px solid currentColor;
+    cursor: pointer;
+    padding-bottom: 2px;
+    transition: all 0.2s;
+
+    &:hover {
+        color: var(--color-grey-dark-1);
+    }
+
+    &:focus {
+        outline: none;
+        animation: pulsate 1s infinite;
+    }
+
+
+    @keyframes pulsate {
+        0% {
+            transform:scale(1);
+            box-shadow: none;
+        }
+
+        50% {
+            transform:scale(1.05);
+            box-shadow: 0 1rem 4rem rgba(0,0,0,0.25);
+        }
+
+        100% {
+            transform:scale(1);
+            box-shadow: none;
+        }
     }
 }
