--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,10 @@ Grey dark 3: #999
   --color-grey-light-4:#ccc;
   --color-grey-dark-1:#333;
   --color-grey-dark-2:#777;
-  --color-grey-dark-3:#999; }
+  --color-grey-dark-3:#999;
+  --line:1px solid var(--color-grey-light-2);
+  --shadow-dark:0 2rem 6rem rgba(0,0,0,0.3);
+  --shadow-light:0 2rem 5rem rgba(0,0,0,0.06); }
 
 * {
   margin: 0;
@@ -191,7 +194,7 @@ body {
 .overview {
   display: flex;
   align-items: center;
-  border-bottom: 1px solid var(--color-grey-light-3); }
+  border-bottom: 1px solid var(--line); }
   .overview__heading {
     font-size: 2.25rem;
     font-weight: 300;
@@ -257,7 +260,6 @@ body {
 
 .container {
   max-width: 120rem;
-  height: 50rem;
   margin: 8rem auto;
   background-color: var(--color-grey-light-2); }
 
@@ -265,19 +267,35 @@ body {
   font-size: 1.4rem;
   height: 7rem;
   background-color: #fff;
-  border-bottom: 1px solid var(--color-grey-light-2);
+  border-bottom: var(--line);
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0 3rem 0 3rem; }
 
 .content {
-  display: flex;
-  height: 60rem; }
+  display: flex; }
 
 .sidebar {
   flex: 0 0 18%;
   background-color: var(--color-grey-dark-1); }
 
 .hotel-view {
+  flex: 1; }
+
+.details {
+  display: flex;
+  background-color: var(--color-grey-light-1);
+  border-bottom: var(--line);
+  padding: 4.5rem; }
+
+.description {
+  flex: 0 0 60%;
+  font-size: 1.4rem;
+  margin-right: 4.5rem;
+  background-color: #fff;
+  padding: 3rem;
+  box-shadow: var(--shadow-light); }
+
+.user-reviews {
   flex: 1; }
