--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -236,7 +236,7 @@
 .overview {
     display: flex;
     align-items: center;
-    border-bottom:1px solid var(--color-grey-light-3);
+    border-bottom:1px solid var(--line);
 
     &__heading {
         font-size: 2.25rem;
