--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -1,6 +1,5 @@
 .container {
     max-width: 120rem;
-    height: 50rem;
     margin: 8rem auto;
     background-color: var(--color-grey-light-2);
 
@@ -10,7 +9,7 @@
     font-size: 1.4rem;
     height: 7rem;
     background-color: #fff;
-    border-bottom:1px solid var(--color-grey-light-2);
+    border-bottom:var(--line);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -20,7 +19,6 @@
 
 .content {
     display: flex;
-    height: 60rem;
 }
 
 .sidebar {
@@ -33,4 +31,27 @@
 .hotel-view {
     flex: 1;
     
+}
+
+
+
+
+.details {
+    display: flex;
+    background-color: var(--color-grey-light-1);
+    border-bottom: var(--line);
+    padding: 4.5rem;
+}
+
+.description {
+    flex: 0 0 60%;
+    font-size: 1.4rem;
+    margin-right: 4.5rem;
+    background-color: #fff;
+    padding: 3rem;
+    box-shadow: var(--shadow-light);
+}
+
+.user-reviews {
+    flex: 1;
 }
