--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -332,3 +332,79 @@
         }
     }
 }
+
+
+
+////////////////////////////////////////
+/// PARAGRAPH
+
+.paragraph {
+    &:not(:last-of-type) {
+        margin-bottom: 2rem;
+    }
+}
+
+////////////////////////////////////////
+/// LIST
+
+.list {
+    border-top: var(--line);
+    border-bottom: var(--line);
+    margin: 3rem 0;
+    padding: 3rem 0;
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+
+    //ensure that the margin not getting applied to last two child
+    & > :nth-last-child(n+3) {
+        margin-bottom: .7rem;
+    }
+
+    &__item {
+        flex: 0 0 50%;
+    }
+
+    &__item::before {
+        content: "";
+        display: inline-block;
+        height: 1rem;
+        width: 1rem;
+        margin-right: .7rem;
+
+        //Older browsers
+        // background-image: url("../img/chevron-thin-right.svg");
+        // background-size: cover;
+
+        background-color: var(--color-primary);
+        -webkit-mask-image: url("../img/chevron-thin-right.svg");
+        -webkit-mask-size: cover;
+
+        //if any other browsers implements this
+        mask-image: url("../img/chevron-thin-right.svg");
+        mask-size: cover;
+
+    }
+}
+
+////////////////////////////////////////
+/// RECOMMEND
+
+.recommend {
+    font-size: 1.3rem;
+    color: var(--color-grey-dark-3);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    &__photo {
+        box-sizing: content-box;
+        height: 4rem;
+        width: 4rem;
+        border: 3px solid #fff;
+        border-radius: 50%;
+        
+        &:not(:last-child) {
+            margin-right: -1.5rem;
+        }
+    }
+}
