--- a/css/style.css
+++ b/css/style.css
@@ -241,8 +241,13 @@ body {
   cursor: pointer;
   padding-bottom: 2px;
   transition: all 0.2s; }
+  .btn-inline span {
+    margin-left: 3px;
+    transition: margin-left .2s; }
   .btn-inline:hover {
     color: var(--color-grey-dark-1); }
+    .btn-inline:hover span {
+      margin-left: 8px; }
   .btn-inline:focus {
     outline: none;
     animation: pulsate 1s infinite; }
@@ -300,6 +305,53 @@ body {
     .recommend__photo:not(:last-child) {
       margin-right: -1.5rem; }
 
+.review {
+  padding: 3rem;
+  position: relative;
+  background-color: #fff;
+  box-shadow: var(--shadow-light);
+  overflow: hidden;
+  margin-bottom: 3.5rem; }
+  .review__text {
+    margin-bottom: 2rem;
+    z-index: 10;
+    position: relative; }
+  .review__user {
+    display: flex;
+    align-items: center; }
+  .review__photo {
+    width: 4.5rem;
+    height: 4.5rem;
+    border-radius: 50%;
+    margin-right: 1.5rem; }
+  .review__user-box {
+    margin-right: auto; }
+    .review__user-box > span {
+      display: block; }
+  .review__user-name {
+    font-size: 1.1rem;
+    text-transform: uppercase;
+    font-weight: 600;
+    margin-bottom: .4rem; }
+  .review__user-date {
+    font-size: 1rem;
+    color: var(--color-grey-dark-3); }
+  .review__rating {
+    font-size: 2.2rem;
+    color: var(--color-primary);
+    font-weight: 300; }
+  .review::before {
+    content: "\201C";
+    position: absolute;
+    top: -2.75rem;
+    left: -1rem;
+    font-size: 20rem;
+    color: var(--color-grey-light-3);
+    font-family: sans-serif;
+    line-height: 1; }
+  .review__button {
+    text-align: center; }
+
 .container {
   max-width: 120rem;
   margin: 8rem auto;
@@ -326,6 +378,7 @@ body {
   flex: 1; }
 
 .details {
+  font-size: 1.4rem;
   display: flex;
   background-color: var(--color-grey-light-1);
   border-bottom: var(--line);
@@ -333,7 +386,6 @@ body {
 
 .description {
   flex: 0 0 60%;
-  font-size: 1.4rem;
   margin-right: 4.5rem;
   background-color: #fff;
   padding: 3rem;
