--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -305,8 +305,15 @@
     padding-bottom: 2px;
     transition: all 0.2s;
 
+    & span {
+        margin-left: 3px;
+        transition: margin-left .2s;
+    }
     &:hover {
         color: var(--color-grey-dark-1);
+        span {
+            margin-left: 8px;
+        }
     }
 
     &:focus {
@@ -408,3 +415,79 @@
         }
     }
 }
+
+
+
+////////////////////////////////////////
+/// REVIEWS
+
+.review {
+    padding:3rem;
+    position: relative;
+    background-color: #fff;
+    box-shadow: var(--shadow-light);
+    overflow: hidden;
+    margin-bottom: 3.5rem;
+    
+
+    &__text {
+        margin-bottom: 2rem;
+        z-index: 10;
+        position: relative;
+    }
+
+    &__user {
+        display: flex;
+        align-items: center;
+    }
+
+    &__photo {
+        width: 4.5rem;
+        height: 4.5rem;
+        border-radius: 50%;
+        margin-right: 1.5rem;
+    }
+
+    &__user-box {
+        margin-right: auto;
+        &>span {
+            display: block;
+        }
+    }
+
+    &__user-name {
+        font-size: 1.1rem;
+        text-transform: uppercase;
+        font-weight: 600;
+        margin-bottom: .4rem;
+    }
+
+    &__user-date {
+        font-size: 1rem;
+        color: var(--color-grey-dark-3);
+    }
+
+    &__rating {
+        font-size: 2.2rem;
+        color: var(--color-primary);
+        font-weight: 300;
+    }
+    
+    &::before {
+        content: "\201C";
+        position: absolute;
+        top: -2.75rem;
+        left: -1rem;
+        font-size: 20rem;
+        color: var(--color-grey-light-3);
+        font-family: sans-serif;
+        line-height: 1;
+    }
+
+    &__button {
+        text-align: center;
+    }
+    
+    
+}
+
