--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -491,3 +491,65 @@
     
 }
 
+
+////////////////////////////////////////
+/// CTA
+.cta {
+    text-align: center;
+    padding: 3.5rem 0;
+    // transition: all 0.2s;
+
+    &__book-now {
+        font-size: 1.5rem;
+        font-weight: 300;
+        text-transform: uppercase;
+        margin-bottom: 2.5rem;
+    }
+}
+
+.btn {
+    font-size: 1.5rem;
+    text-transform: uppercase;
+    border: none;
+    background-image: linear-gradient(to right ,var(--color-primary-light) ,var(--color-primary-dark));
+    color: #fff;
+    border-radius: 100px;
+    cursor: pointer;
+    position: relative;
+    overflow: hidden;
+
+    & > * {
+        display: inline-block;
+        width: 100%;
+        height: 100%;
+        transition: all 0.2s;
+    }
+
+    &__visible {
+        padding: 2rem 7.5rem;
+    }
+
+    &__invisible {
+        position: absolute;
+        top: -100%;
+        left: 0;
+        padding: 2rem 0;
+    }
+
+    &:hover &__invisible {
+        top: 0;
+    }
+
+    &:hover &__visible {
+        transform: translateY(100%);
+    }
+
+    &:hover {
+        background-image: linear-gradient(to left ,var(--color-primary-light) ,var(--color-primary-dark));
+    }
+
+    &:focus {
+        outline: none;
+        animation: pulsate 1s infinite;
+    }
+}
